--- a/main.css
+++ b/main.css
@@ -532,7 +532,7 @@ background-color: var(--tertiary-con);
 
 }
 #navbar_small_con{
- position: absolute; 
+ position: fixed; 
  width: 100%;
  height: 100vh   ;
  background-color: var(--tertiary-con);
@@ -560,7 +560,7 @@ background-color: var(--tertiary-con);
     
 }
 
-@media only screen and (min-width:550px) {
+@media only screen and (min-width:551px) {
 
     #navbar_small_con{
         display: none;
